<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="74dp"
            android:layout_height="109dp"
            android:contentDescription="@string/list_image"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent">
        </ImageView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="311dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/title"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="311dp"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:text="@string/lorem_ipsum"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/imageView"
            card_view:layout_constraintTop_toBottomOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>